--- a/teste00-main/Restaurante/Menu/style.css
+++ b/teste00-main/Restaurante/Menu/style.css
@@ -105,7 +105,7 @@ p{
 
 @media (width >= 1024px){
     body{
-        background-image: url("../assets/fundo-browser.jpg");
+        background-image: url("../assets/interior-de-um-cafe-moderno-onde-nao-ha-pessoas-iluminacao-artificial.jpg");
     }
     .img-style{
         width: 400px;
@@ -125,4 +125,3 @@ p{
 
     }
 }
-
